# butter_bot

./: .gitignore  LICENSE  README.md  pip_requirements.txt
butter_bot/: HAL.py  bot.py  find_butter.py  motor_driver.py  motor_t.lcm  navigator.py  navstate_t.lcm  pid.py  state_manager.py  state_t.lcm  tagpos_t.lcm  teleop.py
butter_bot/tags/apriltags/: CMakeLists.txt
butter_bot/tags/apriltags/example/: CMakeLists.txt  rpitags.cpp
butter_bot/tests/: findbutter_test.py
